Remove .env from repo

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,6 +3,9 @@
 .env
 .env.backup
 .env.production
+/.env
+/.env.example
+
 .phpactor.json
 .phpunit.result.cache
 /.fleet
@@ -22,6 +25,3 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
-
-.env
-.env.example
