--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "*",
         "prettus/l5-repository": "^3.0",
         "tymon/jwt-auth": "^2.2"
     },
