--- a/.vercelignore
+++ b/.vercelignore
@@ -1,1 +1,15 @@
-/vendor
+node_modules
+.git
+.env
+.env.*
+!.env.example
+*.log
+storage/logs
+storage/framework/cache
+storage/framework/sessions
+storage/framework/views
+bootstrap/cache
+.DS_Store
+tests
+docs
+.github
