--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
+        "predis/predis": "^3.2",
         "prettus/l5-repository": "^3.0",
         "tymon/jwt-auth": "^2.2"
     },
