--- a/.github/workflows/infinity-free.yml
+++ b/.github/workflows/infinity-free.yml
@@ -1,4 +1,4 @@
-name: Deploy to InfinityFree
+name: Deploy to MWShop
 
 on:
   push:
@@ -39,13 +39,13 @@ jobs:
         php artisan route:cache
         php artisan view:cache
 
-    - name: Prepare for InfinityFree deployment
+    - name: Prepare for MWShop deployment
       run: |
-        # Move public contents to root for InfinityFree structure
+        # Move public contents to root for MWShop structure
         cp public/index.php ./index_public.php
         cp public/.htaccess ./.htaccess_public
 
-    - name: Deploy to InfinityFree via FTP
+    - name: Deploy to MWShop
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
         server: ${{ secrets.FTP_SERVER }}
@@ -62,7 +62,7 @@ jobs:
           .env
           .env.example
 
-    - name: Setup InfinityFree structure
+    - name: Setup MWShop structure
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
         server: ${{ secrets.FTP_SERVER }}
