--- a/.github/workflows/infinity-free.yml
+++ b/.github/workflows/infinity-free.yml
@@ -51,7 +51,7 @@ jobs:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: /mwshop/htdocs/
+        server-dir: /htdocs/
         local-dir: ./
         exclude: |
           **/.git*
@@ -68,6 +68,6 @@ jobs:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: /mwshop/htdocs/
+        server-dir: /htdocs/
         local-dir: ./public/
         dry-run: false
