Fix Render deployment config with debug mode

--- a/render.yaml
+++ b/render.yaml
@@ -12,11 +12,47 @@ services:
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
-        value: false
-      - key: APP_KEY
-        generateValue: true
+        value: true
       - key: LOG_CHANNEL
         value: stderr
-      - key: DB_CONNECTION
-        value: mysql
-    healthCheckPath: /
+      - key: LOG_LEVEL
+        value: debug
+      - key: SESSION_DRIVER
+        value: file
+      - key: CACHE_DRIVER
+        value: file
+      - key: QUEUE_CONNECTION
+        value: sync
+      - key: FILESYSTEM_DISK
+        value: local
+      # Uncomment and configure these when you add a database:
+      # - key: DB_CONNECTION
+      #   value: mysql
+      # - key: DB_HOST
+      #   fromDatabase:
+      #     name: modernshop-db
+      #     property: host
+      # - key: DB_PORT
+      #   fromDatabase:
+      #     name: modernshop-db
+      #     property: port
+      # - key: DB_DATABASE
+      #   fromDatabase:
+      #     name: modernshop-db
+      #     property: database
+      # - key: DB_USERNAME
+      #   fromDatabase:
+      #     name: modernshop-db
+      #     property: user
+      # - key: DB_PASSWORD
+      #   fromDatabase:
+      #     name: modernshop-db
+      #     property: password
+    healthCheckPath: /health
+
+# To add a database, uncomment and configure:
+# databases:
+#   - name: modernshop-db
+#     plan: free
+#     databaseName: modernshop
+#     user: modernshop
